--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "resistance",
   "description": "a flow controller",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "homepage": "https://github.com/jgallen23/resistance",
   "authors": ["Greg Allen, @jgallen23"],
   "repository": {
     "type": "git",
     "url": "https://github.com/jgallen23/resistance.git"
   },
-  "main": "./dist/resistance.js",
+  "devDependencies": {
+    "nodeunit": "*",
+    "smoosh": "*"
+  },
   "keywords": ["ender", "flow"],
-  "ender": "./src/ender.js"
+  "ender": "./lib/ender.js"
 }
