--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "a flow controller",
   "version": "1.3.0",
   "homepage": "https://github.com/jgallen23/resistance",
-  "authors": ["Greg Allen, @jgallen23"],
+  "author": "Greg Allen <@jgaui> (http://jga.me)",
   "repository": {
     "type": "git",
     "url": "https://github.com/jgallen23/resistance.git"
