--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resistance",
   "description": "a flow controller",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "homepage": "https://github.com/jgallen23/resistance",
   "author": "Greg Allen <@jgaui> (http://jga.me)",
   "repository": {
@@ -12,6 +12,7 @@
     "nodeunit": "*",
     "smoosh": "*"
   },
-  "keywords": ["ender", "flow"],
-  "ender": "./lib/ender.js"
+  "main": "./dist/resistance.js",
+  "ender": "./lib/ender.js",
+  "keywords": ["ender", "flow"]
 }
