--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resistance",
   "description": "a flow controller",
-  "version": "2.0.0alpha2",
+  "version": "2.0.0alpha3",
   "homepage": "https://github.com/jgallen23/resistance",
   "author": "Greg Allen <@jgaui> (http://jga.me)",
   "repository": {
@@ -13,5 +13,6 @@
     "chai": "*",
     "smoosh": "*"
   },
+  "main": "./lib/resistance",
   "keywords": ["flow", "async"]
 }
